# Defender

./: .branch-merge-complete  .env.example  .env.local  .gitignore  .npmrc  .vercel-trigger  .vercelignore  ANALISE_CODIGO.md  ARQUITETURA_PERFIS.md  CHANGELOG-MELHORIAS.md  CHANGELOG_DESIGN.md  CLAUDE.md  COMO_ADICIONAR_ICONES.md  CONECTAR_GITHUB.md  CONFIGURAR_CREDENCIAIS.html  CREDENCIAIS.md  DASHBOARD_RESTRUCTURING_COMPLETE.md  DEPLOY.md  DEPLOY_GUIDE.md  DESIGN_SYSTEM.md  Dockerfile  EXECUTAR_AGORA.md  EXECUTAR_BUSINESS_RULES.sql  Estrategia-Automacao-OMBUDS-2026.md  GUIA_RAPIDO_ICONES.md  INAUGURACAO_DEFENDER.sql  INSTRUCOES_LOGO.md  MELHORIAS_INTERFACE_RESUMO.md  MIGRACAO_DRIVE_PARA_LOCAL.md  MIGRAR_MACOS.md  ORGANIZACAO_VISUAL_FINAL.md  OpenClaw-OMBUDS-Integracao-Completa.md  PADRONIZACAO_VISUAL_COMPLETA.md  QUICK_START.md  README.md  REFORMA_VISUAL_INTELEX.md  RESUMO_PADRONIZACAO.md  SETUP_GOOGLE_CLOUD.md  SUPABASE_CONFIG.md  SUPABASE_STORAGE_SETUP.sql  (+22 more)
.aiox-core/: core-config.yaml  install-manifest.yaml  version.json
.claude/: AGENTS.md  RULES.md  launch.json  mcp.json  mcp.json.example  settings.json
.openclaw/: workspace-state.json
__tests__/: skills-matcher.test.ts  sync-engine.test.ts
api/: index.ts
docs/: README.md  (+7 more)
mcp-defender-brasil/: pyproject.toml  server.py
mcp-defender-brasil/clients/: atlas.py  brasilapi.py  datajud.py  ibge.py
mcp-defender-brasil/formatters/: datajud.py  localidade.py
mcp-defender-brasil/tests/: test_datajud_client.py  test_datajud_formatter.py  test_localidade_clients.py  test_localidade_formatter.py  test_server.py
(+3400 files in other folders)
